--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 openai-api = "0.1.4"
 tokio = { version = "^0.2.5", features = ["full"]}
-chrono = "0.4"
+chrono = "^0.4"
 derive_builder = "^0.10"
+clap = "^3.0"
