--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 openai-api = "0.1.4"
-tokio = { version = "^0.2.5", features = ["full"]}
-chrono = "^0.4"
-derive_builder = "^0.10"
-clap = "^3.0"
+tokio = { version = "1.15", features = ["full"]}
+chrono = "0.4"
+derive_builder = "0.10"
+clap = "3.0"
+serenity = "0.10"
+reqwest = "0.11"
