--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,7 @@ chrono = "0.4"
 derive_builder = "0.10"
 clap = "3.0"
 serenity = "0.10"
-reqwest = "0.11"
+reqwest = { version = "0.11", features = ["json"] }
+serde = "1.0"
+serde_json = "1.0"
+thiserror = "1.0"
